# prs2rnnbot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yml
src/mycardbot/: main.py
src/mycardbot/content/: admin_broadcast.html  broadcast.html  cv.html  feedback.html  now.html  start.html
src/mycardbot/core/: config.py  database.py  setup_commands.py  setup_logging.py  setup_routers.py  utils.py
src/mycardbot/filters/: check_admin.py
src/mycardbot/handlers/admin/: callback.py  message.py
src/mycardbot/handlers/user/: callback.py  message.py
src/mycardbot/keyboards/: admin_keyboard.py  user_keyboard.py
src/mycardbot/middlewares/: check_ban.py  notification.py
src/mycardbot/states/: admin.py
src/prs2rnnbot/: keyboard.py  main.py  utils.py
src/prs2rnnbot/content/: admin.html  contact.html  feedback.html  start.html
src/prs2rnnbot/core/: database.py  setup_logging.py  setup_routers.py  utils.py
src/prs2rnnbot/filters/: check_admin.py
src/prs2rnnbot/handlers/admin/: callback.py
src/prs2rnnbot/handlers/user/: callback.py  message.py
src/prs2rnnbot/keyboards/: admin_keyboard.py  user_keyboard.py
src/prs2rnnbot/middlewares/: logging.py
src/prs2rnnbot/states/: state.py
tests/: test_database.py
