[project]
name = "prs2rnnbot"
version = "0.1.0"
description = "A bot that serves as my personal portfolio"
authors = [
    {name = "prs2rnn",email = "developer.prs2rnn@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14,<3.15"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "aiogram (>=3.27.0,<4.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"
]
[tool.poetry]
packages = [{include = "prs2rnnbot", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.pytest.ini_options]
pythonpath = [
  "src/prs2rnnbot",
]
