[project]
name = "mycardbot"
version = "0.2.0"
description = "MyCardBot is a bot that serves as a personal portfolio"
authors = [
    {name = "prs2rnn",email = "developer.prs2rnn@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14,<3.15"
dependencies = [
    "aiogram (>=3.27.0,<4.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)"
]
[tool.poetry]
packages = [{include = "mycardbot", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "python-semantic-release (>=10.5.3,<11.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[tool.pytest.ini_options]
pythonpath = [
  "src/mycardbot",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
commit_parser = "conventional"
changelog_file = "CHANGELOG.md"
upload_to_pypi = false
major_on_zero = false
allow_zero_version = true
